# Videomass

./: .CHANGELOG.kate-swp  .INSTALL.kate-swp  .flake8  .gitignore  .index.md.kate-swp  .pylintrc  .test-debug.py.kate-swp  .travis.yml  AUTHORS  BUGS  CHANGELOG  Contribute.md  DIFF4  Docs.md  Gemfile  INSTALL  MANIFEST.in  README.md  Screenshots.md  TODO  _config.yml  about.md  building_package.md  dependencies.md  donation.md  download.md  download_installation.md  execute_sources.md  features.md  ffmpeg2pass-0.log.mbtree  hatch_build.py  index.md  installation.md  io.github.jeanslack.videomass.appdata.xml  known_problems.md  launcher  license.md  presets_update.md  prova.py  pyproject.toml  (+19 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: ask-a-question.md  bug_report.md  feature_request.md
.github/workflows/: tests.yml
.pybuild/cpython3_3.7/: .pydistutils.cfg  testfiles_to_rm_before_install
BACKUP_po/: videomass.pot
FFMPEG/: README
MAcOsxSetup/FFMPEG_BIN/: README
OLD/: fpython  presets_manager_properties.OLD.py  task_processing.OLD.py
OLD/test/: test.py
PORTABLE/: settings.json
PORTABLE/presets/: Audio_Conversions.prst  Coding to DVD by GMJCZP.prst  Embed_Subtitles_to_Video.prst  Extract_audio_from_Videos.prst  For_Archive_Collection.prst  Video Encoding VP9-WebM.prst  Video_Streaming.prst
Pages/: Bugs.md  Deint_Inter.md  Denoisers.md  FilterCrop.md  FilterScaling.md  Localization_Guidelines.md  User_Guide.md  VideoFilters.md
Pages/Filters/: Deint_Inter.md  Denoisers.md  FilterCrop.md  FilterScaling.md  VideoFilters.md
Pages/Presets/: presets_update.md
Pages/Startup/: Setup.md  Startup.md
Pages/Toolbar/: Duration.md  Show_metadata.md  Toolbar.md
Win32Setup/: NOTICE.rtf  README_win32setup.txt  ffplay_reproduction.py  ffprobe_parser.py  task_processing.py  volumedetect.py
Win32Setup/FFMPEG_BIN/: README
_layouts/: default.html
_posts/: 2021-08-26-welcome-to-jekyll.markdown
_sass/color_schemes/: custom_1.scss
art/: videomass.desktop  videomass.icns  videomass2.desktop
art/material-design-icons/: README_materialDesignIcons
cache/youtube-dl/: README.txt
deb_dist/: python-videomass2_1.0.0-1_all.deb  videomass2_1.0.0-1.debian.tar.xz  videomass2_1.0.0-1.dsc  videomass2_1.0.0-1_amd64.buildinfo  videomass2_1.0.0-1_amd64.changes  videomass2_1.0.0-1_source.buildinfo  videomass2_1.0.0-1_source.changes
deb_dist/videomass2-1.0.0/: AUTHORS  CHANGELOG  MANIFEST.in  PKG-INFO  TODO  setup.py  videomass2.desktop
debian/: README.Debian  changelog  control  copyright  rules
debian/source/: options
dev/: make_pot.sh
dev/make application bundles/: Make_bundle.md  pyinstaller_setup.py
dev/pyinstaller/: README.md  generate_INNO_setup.py  pyinstaller_setup.py
dev/tools/: README.md  makeAppImage.py  pyinstaller_setup.py
develop/: BACKUP_pyinstaller_setup.py  localization_guidelines.md  localization_howto.md  make_pot.sh
develop/gettext_utils/: File_Catalog.txt  Translation_Catalog.txt  babelutils.py  create_POT_file.sh  generate_MO_files.sh  make_pot.sh  purge_deleted_translation.sh  update_PO_files.sh  update_po_files.sh
develop/tools/: AppImage_Update_Tool.sh  AppImage_build.sh  AppImage_build_GTK2.sh  AppImage_build_GTK3.sh  AppRun  PROVA.py  README.md  README_make_appimage.md  create_ICNS.sh  embed-python-videomass-appimage.sh  generate_INNO_setup.py  inkscape2png  inkscape2png.py  makeAppImage.py  make_videomassGTK2_appimage.sh  make_videomassGTK3_appimage.sh  make_videomass_appimage.sh  pyinstaller-appimage.py  pyinstaller_setup.py  pythonAppImage_extract  rsvg2png  rsvg2png.py  update-python-videomass-appimage.sh  youtube-dl-update.sh  youtube_dl_update_appimage.sh
docs/: EBU_resources.md  localization_guidelines.md  localization_howto.md  pyinstaller_setup.md
docs/HTML/: 02-Guida_installazione.html  04-Gestione_presets.html  10-Estrarre_immagini.html  14-Tagliare_video.html  16-Processi_di_Esportazione.html  Indice_ipertestuale.html
history/: history.db
locale/: README  make_pot.sh  videomass.pot  videomass2.pot
requirements/: build-debpkg.txt  development.txt  installation.txt  requirements-build.txt  requirements-dev.txt  requirements-linters.txt  requirements-linux.txt  requirements-windows.txt
resources/hicolor/: COPYING-ICONS.txt
resources/locale/: videomass.pot
resources/presets/: Coding-to-DVD-by-GMJCZP.md  Davinci Resolve Linux.json  VP9-WebM.json
share/: README  preset-v1-Audio.vdms  preset-v1-IPOD_ANDROID.vdms  preset-v1-MobilePhones.vdms  preset-v1-PSP.vdms  preset-v1-VideoAudio.vdms  preset-v1-iPod-iTunes.vdms  preset-v1-websites.vdms  videomass.conf  videomass2.conf  videomassWin32.conf
share/presets/: Audio Normalization.prst  Encoding for Devices.prst  For Archive Collection.prst  Pictures from Video.prst  Utility.prst  Video-Streaming.prst
share/vdms/: Audio Conversions.vdms  Audio from Video.vdms  DV Conversions.vdms  DVD-mpg.vdms  FLV for Web use.vdms  From VOB to AVI.vdms  PS3.vdms  (+24 more)
test/: test_ffprobe.py
tests/: test_app.py  test_check_bin.py  test_display_GUI.py  test_ffprobe.py  test_utils.py
utilities/: localization_howto.md
vdms_DIALOGS/: audiodialogs.py  dialog_tools.py  epilogue.py  first_time_start.py  infoprg.py  mediainfo.py  palette.py  presets_addnew.py  settings.py  video_crop.py  video_sizer.py
vdms_IO/: IO_tools.py  filedir_control.py  make_filelog.py  presets_manager_properties.py
vdms_MAIN/: main_frame.py
vdms_PANELS/: .video_conv.py.kate-swp  audio_conv.py  dragNdrop.py  presets_mng_panel.py  video_conv.py
vdms_PROCESS/: ffplay_reproduction.py  ffprobe_parser.py  task_processing.py  volumedetect.py
vdms_SYS/: app_const.py  appearance.py  ctrl_run.py  msg_info.py  os_interaction.py
videomass/: gui_app.py
videomass2/: Videomass2.py
videomass2.egg-info/: SOURCES.txt  requires.txt
videomass3/: Videomass3.py  __init__.py  av_conversions.py  choose_topicBACK.py  filedrop.py  main_frame.py  presets_manager.py  settings.py  vdms3.py  youtubedl_ui.py
xdg/: io.github.jeanslack.videomass.appdata.xml  io.github.jeanslack.videomass.desktop
youtube-dl/: youtube-dl.1
(+679 files in other folders)
